--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>HurdC_project</title>
+<title>Rock, Paper, Scissors Game</title>
 <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
