--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div id="title">
 		<h1>Rock-Paper-Scissors</h1>
 		<h2>First to 5 Wins</h2>
-		<h3>Instructions: Player uses 1, 2, and 3 keys (Rock, Paper, and Scissors respectivly)
+		<h3>Instructions: Player 1 uses 1, 2, and 3 keys (Rock, Paper, and Scissors respectivly)
 			<br>Player 2 uses 7, 8, and 9 keys (Rock, Paper, and Scissors respectivly)</h3>
 	</div>
 	
